# tensor-rs

./: .gitignore  Cargo.toml
src/: dim.rs  gradient.rs  impl_binary_ops.rs  impl_constructors.rs  impl_iter.rs  impl_methods.rs  impl_processing_ops.rs  impl_reduce_ops.rs  impl_traits.rs  impl_unary_ops.rs  lib.rs  num_taits.rs  unique_id.rs  utils.rs
src/mnist/: mod.rs
src/neural_nets/: layers.rs  loss.rs  mod.rs
src/tensor/: dim.rs  impl_constructors.rs  impl_debug.rs  impl_eq.rs  impl_index.rs  impl_tensor.rs  mod.rs  utils.rs
src/tensor/ops/: binary_ops.rs  mod.rs  reduce_ops.rs  unary_ops.rs
