[package]
name = "tensor-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ndarray-rand = {version = "0.14.0"}
rand = {version = "0.8.5"}
ndarray = {version = "0.15.6"}
ndarray-stats = {version = "0.5.1"}
